--- a/pages/comedia.html
+++ b/pages/comedia.html
@@ -33,7 +33,7 @@
         <h1>...Peliculas Comedia... </h1>
         <section class="co">
             <nav>
-                <img src="../assets/Comedia1.jpg" alt="">
+                <img src="../assets/comedia1.jpg" alt="">
                 <article class="comedy">
                     <h2>Noche de Juegos</h2>
                     <p>Un grupo de amigos que se reúne una vez a la semana para jugar cambia su rutina y decide organizar un juego de resolver un falso asesinato, pero..</p>
@@ -41,7 +41,7 @@
                 </article>
             </nav>
             <nav>
-                <img src="../assets/Comedia2.jpg" alt="">
+                <img src="../assets/comedia2.jpg" alt="">
                 <article class="comedy">
                     <h2>Los Busca Novias</h2>
                     <p>Dos hermanos, jóvenes, alocados y amantes de las fiestas, contactan por internet con dos chicas, en apariencia tranquilas pero en realidad ..</p>
@@ -49,7 +49,7 @@
                 </article>
             </nav>
             <nav>
-                <img src="../assets/Comedia3.jpg" alt="">
+                <img src="../assets/comedia3.jpg" alt="">
                 <article class="comedy">
                     <h2>Viaje de chicas</h2>
                     <p>Cuatro viejas amigas de la infancia viajan a Nueva Orleans para el Essence Festival, aprovechando que una de ellas, la escritora de libros de auto-ayuda, va a ..</p>
@@ -57,7 +57,7 @@
                 </article>
             </nav>
             <nav>
-                <img src="../assets/Comedia4.jpg" alt="">
+                <img src="../assets/comedia4.jpg" alt="">
                 <article class="comedy">
                     <h2>Scary Movie</h2>
                     <p>Una bella estudiante muere asesinada. Un grupo de desorientados adolescentes descubre que entre ellos hay un asesino. La heroína Cyndi Campbell y su grupo..</p>
