--- a/pages/ficcion.html
+++ b/pages/ficcion.html
@@ -33,7 +33,7 @@
         <h1>...Peliculas Ciencia Ficción...</h1>
         <section class="fi">
             <nav>
-                <img src="../assets/Ficcion1.jpg" alt="">
+                <img src="../assets/ficcion1.jpg" alt="">
                 <article class="fiction">
                     <h2>Pantera Negra</h2>
                     <p>Después de morir su padre, T'Challa regresa a su nación, Wakanda. Una vez allí, descubre que tiene un nuevo y terrible enemigo, y T'Challa.. </p>
@@ -41,7 +41,7 @@
                 </article>
             </nav>
             <nav>
-                <img src="../assets/Ficcion2.jpg" alt="">
+                <img src="../assets/ficcion2.jpg" alt="">
                 <article class="fiction">
                     <h2>El Planeta de los Simios: La Guerra</h2>
                     <p>César y sus monos son obligados a enfrentar un conflicto mortal contra un ejército de humanos liderado por un brutal coronel. Después de sufrir pérdidas enormes..</p>
@@ -49,7 +49,7 @@
                 </article>
             </nav>
             <nav>                
-                <img src="../assets/Ficcion3.jpg" alt="">
+                <img src="../assets/ficcion3.jpg" alt="">
                 <article class="fiction">
                     <h2>Iron Man 3</h2>
                     <p>Después de que un enemigo malévolo, reduce su mundo a escombros, Tony Stark debe confiar en sus instintos e ingenuidad para proteger a ..</p>
@@ -57,7 +57,7 @@
                 </article>
             </nav>
             <nav>
-                <img src="../assets/Ficcion4.jpg" alt="">
+                <img src="../assets/ficcion4.jpg" alt="">
                 <article class="fiction">
                     <h2>La forma del Agua</h2>
                     <p>Elisa es una joven muda que se enamora de un hombre anfibio que está recluido en un acuario en un laboratorio secreto, propiedad del Gobierno, en el que .. </p>
